# Pattern-Recognition-Systems

./: .build.env.default  .gitignore  Makefile  meson.build
Lab1/: Lab1.cpp
Lab1/points/: points0.txt  points1.txt  points2.txt  points3.txt  points4.txt  points5.txt
Lab2/: Lab2.cpp
Lab3/: Lab3.cpp
Lab4/: Lab4.cpp
Lab5/: Lab5.cpp
Lab6/: Lab6.cpp
Lab6/data_PCA/: pca2d.txt  pca3d.txt
Lab7/: Lab7.cpp
Lab8/: Lab8.cpp
Lab9/: Lab9.cpp
Lab9/images_Bayes/: readme.txt
LabA/: LabA.cpp
